gccida/c1/int_fits_type_p
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/int_fits_type_p/src/tree.c:4791:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/int_fits_type_p/src/tree.c:4821:15: error: expected expression
&& *( _OWORD *)&c->block.vars >= *( _OWORD *)&type->decl.initial->block.vars ) 
              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/int_fits_type_p/src/tree.c:4821:7: error: use of undeclared identifier '_OWORD'
&& *( _OWORD *)&c->block.vars >= *( _OWORD *)&type->decl.initial->block.vars ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/int_fits_type_p/src/tree.c:4821:45: error: expected expression
&& *( _OWORD *)&c->block.vars >= *( _OWORD *)&type->decl.initial->block.vars ) 
                                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/int_fits_type_p/src/tree.c:4821:37: error: use of undeclared identifier '_OWORD'
&& *( _OWORD *)&c->block.vars >= *( _OWORD *)&type->decl.initial->block.vars ) 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/int_fits_type_p/src/tree.c:4833:15: error: expected expression
&& *( _OWORD *)&c->block.vars >= *( _OWORD *)&type->decl.initial->block.vars ) 
              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/int_fits_type_p/src/tree.c:4833:7: error: use of undeclared identifier '_OWORD'
&& *( _OWORD *)&c->block.vars >= *( _OWORD *)&type->decl.initial->block.vars ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/int_fits_type_p/src/tree.c:4833:45: error: expected expression
&& *( _OWORD *)&c->block.vars >= *( _OWORD *)&type->decl.initial->block.vars ) 
                                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/int_fits_type_p/src/tree.c:4833:37: error: use of undeclared identifier '_OWORD'
&& *( _OWORD *)&c->block.vars >= *( _OWORD *)&type->decl.initial->block.vars ) 
                                    ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/int_fits_type_p/src/obj/tree.o] Error 1
